@@ -32,6 +32,8 @@ Bugs fixed
   a default parameter with an empty list `[]`. Thanks to Geert Jansen.
 * #1508: Non-ASCII filename raise exception on make singlehtml, latex, man,
   texinfo and changes.
+* #1531: On Python3 environment, docutils.conf with 'source_link=true' in the
+  general section cause type error.
 
 Release 1.2.2 (released Mar 2, 2014)
 ====================================
